Fix empty space issue between sidebar title and collapse icon for Terms

--- a/src/demo/demo-components/DemoInfoSidebar/DemoInfoSidebar.css
+++ b/src/demo/demo-components/DemoInfoSidebar/DemoInfoSidebar.css
@@ -21,7 +21,7 @@
 
 .sidebar-heading {
     text-align: left;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
 }
 
 .demo-info-paragraph {
@@ -46,7 +46,7 @@
     margin-top: 1vmin;
     font-size: 1.1rem;
     padding: 1vmin 2vmin;
-    background-color: #E5F2F6;
+    background-color: #e5f2f6;
     color: #006769;
     transition: transform 0.3s ease-in-out;
 }
